# superstore-analytics-engine

./: README.md  main.py  pyproject.toml  requirements.txt
app/: app.py
app/model/: fetch_data.py
data/: indian_superstore_data.xlsx
notebooks/: analysis.ipynb
pipeline/: pipeline.py
src/: analysis.py  data_loader.py  plots.py  preprocess.py
utils/: logger.py
